--- a/inst/assets/styles.css
+++ b/inst/assets/styles.css
@@ -10,3 +10,12 @@
   display: block;
 }
 
+.offcanvas-backdrop {
+  display: none;
+}
+
+.offcanvas-body {
+  box-shadow: -1px -9px 5px 0px rgba(0,0,0,0.25);
+  -webkit-box-shadow: -1px -9px 5px 0px rgba(0,0,0,0.25);
+  -moz-box-shadow: -1px -9px 5px 0px rgba(0,0,0,0.25);
+}
