--- a/inst/assets/styles.css
+++ b/inst/assets/styles.css
@@ -19,3 +19,7 @@
   -webkit-box-shadow: -1px -9px 5px 0px rgba(0,0,0,0.25);
   -moz-box-shadow: -1px -9px 5px 0px rgba(0,0,0,0.25);
 }
+
+.add-block {
+  cursor: pointer;
+}
